tests/base/parser/bad/cmodule-field-id-colon-tid-eq-with.scilla
scilla_version 0

contract Test
()

(* field is a keyword *)
field something : Uint128 = field
